--- a/latex/MarcLijour-About-me.tex
+++ b/latex/MarcLijour-About-me.tex
@@ -39,8 +39,8 @@
 \end{flushright}
 \section{About me}
 Marc is an IT consultant specializing in digital transformation and emerging technologies such as Blockchain. 
-He founded Metamesh Consulting with a dozen highly skilled ex-colleagues from ConsenSys and top industry experts.
-Metamesh Consulting focuses on improving the competitive advantage of medium to large businesses, leveraging the best tools and methodologies such as Design Thinking, Agile, and DevOps.
+He founded Metamesh Consulting with a dozen highly skilled ex-colleagues from ConsenSys and other industry experts.
+Metamesh Consulting focuses on improving the competitive advantage of medium to large businesses, leveraging the best tools and methodologies such as Design Thinking, Agile, and DevOps to achieve concrete business outcomes.
 
 Marc has a Bachelor degree in Mathematics from the University of Paris, as well as a Bachelor degree in Computer Science  and an MBA in Technology Management and Innovation from Ryerson University.
 He has completed several management courses including an IT Executive Leadership certificate taught by CIOs for CIOs from Leaders~Beyond, and coursework towards the Superintendent qualification.
@@ -50,6 +50,7 @@ Marc is an officer of the board of the Information and Communications Technology
 
 He advised start-ups for the last ten years, most significantly Prepr, where he assumed the role of CEO.
 Prepr offers a centre of innovation in a box, making it easy as PIE$^\copyright$ to go from ideation to commercialization.
+Marc is now actively working on a startup aiming to disrupt the nature of work and to provide more liquidity to the job market. 
 
 \section{Experience}
 Marc has lead Industry Transformation at Cisco focusing on the Education sector, helping government, university presidents, and secondary school superintendents design and implement their vision for a 21$^{st}$ education system.
@@ -61,17 +62,19 @@ He also built and strengthened strategic partnerships with Microsoft, IBM, and R
 
 In 2018, Marc joined ConsenSys to build a consulting practice in Canada.
 He developed a strategy focusing on the enterprise market, to help identify and implement relevant applications of blockchain technology to secure a disruptive competitive advantage.
-Regrettably, he was not able to hire people fast enough in Toronto to handle all the demand emerging in the Canadian market.
+%Regrettably, he was not able to hire people fast enough in Toronto to handle all the demand emerging in the Canadian market.
+He eventually chaired the governance board of the global consulting organization, counting 300 staff across 30 countries.
 
 Prior to his consulting career, Marc worked 15+ years in the public sector.
 He held senior roles as a subject matter expert in the Government of Ontario, where he advised on Intellectual Property policy, cloud procurement practice, IT and other policies in education.
+His main expertise is in the administration of education systems.
 Managing key programs, he was instrumental in launching e-learning to serve 2 million students across the province.
 
 Recently, he designed the first postgraduate certificate for Blockchain Developers in Canada, launched by George Brown College in September 2018.
 He is happy to teach a few courses at the College, such as Software Development Methodologies and Blockchain Applications Design Patterns.
 
 \section{Skills}
-Marc has experience leading industry transformation projects, especially in the public sector.
+Marc has experience leading strategic industry transformation projects, especially in the public sector.
 That includes contributing to the project in most roles, driving the creation of consortia, partnerships, and co-ventures.
 He has a wide understanding of emerging technologies, when to deploy them, and who can successfully execute these projects.
 
